updated sponsorData.json to correct pathing and added z-index of 9 to popup

--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -850,6 +850,7 @@ input,
     border-radius: 16px;
     width: 22.5%;
     transition: all 0.6s ease-in-out;
+    z-index: 9;
 }
 
 .popupLocation{
